Bug 487021 - "This file does not exist error" after clicking on a folder
Summary: "This file does not exist error" after clicking on a folder
Status: RESOLVED FIXED
Alias: None
Product: kio-gdrive
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 24.02.2
Platform: Fedora RPMs Linux
: NOR major
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-14 15:18 UTC by James W
Modified: 2024-06-11 21:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.05.2
Sentry Crash Report:


Attachments
An example of the aforementioned error (116.62 KB, image/png)
2024-05-14 15:18 UTC, James W
Details
root folder opens fine (55.53 KB, image/png)
2024-06-08 10:01 UTC, Mark Fairbairn
Details
reports sub folders do not exist (50.76 KB, image/png)
2024-06-08 10:01 UTC, Mark Fairbairn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description James W 2024-05-14 15:18:11 UTC
Created attachment 169479 [details]
An example of the aforementioned error

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY
After initially connecting to and working from my google drive in dolphin I went to explore the drive directory and received errors trying to open files beyond the root directory of the google drive(see attachment)

STEPS TO REPRODUCE
1. connect google drive account
2. operate out of account for some time
3. open dolphin
4. go to the google drive file
5. attempt to open any folder within root of google drive

OBSERVED RESULT
error stating file does not exist

EXPECTED RESULT
file to open

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 40
(available in About System)
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.0

ADDITIONAL INFORMATION
Comment 1 Mark Fairbairn 2024-06-08 10:00:53 UTC
I too am seeing this issue since updating to plasma 6.
Steps to reproduce

open gdrive without issue. 
Can open files in root folder of drive but cannot open folders.
Receive error message "folder does not exist"
Comment 2 Mark Fairbairn 2024-06-08 10:01:18 UTC
Created attachment 170265 [details]
root folder opens fine
Comment 3 Mark Fairbairn 2024-06-08 10:01:42 UTC
Created attachment 170266 [details]
reports sub folders do not exist
Comment 4 Mark Fairbairn 2024-06-08 10:58:56 UTC
(In reply to Mark Fairbairn from comment #1)
> I too am seeing this issue since updating to plasma 6.
> Steps to reproduce
> 
> open gdrive without issue. 
> Can open files in root folder of drive but cannot open folders.
> Receive error message "folder does not exist"

this is on openSUSE Tumbleweed
Plasma 6.0.5
QT 6.7.0 kernel 6.9.3-1
Wayland
kio-gdrive 24.05.0-1.1
Comment 5 Bug Janitor Service 2024-06-09 11:13:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/kio-gdrive/-/merge_requests/33
Comment 6 Elvis Angelaccio 2024-06-11 21:52:35 UTC
Git commit 3855e40f3b8fe25e03c85ed6c25cfb2f0a118565 by Elvis Angelaccio.
Committed on 11/06/2024 at 21:50.
Pushed by elvisangelaccio into branch 'master'.

Fix regression in fileId lookup

Regression introduced in ed1507bc93 when porting to WorkerBase.

The resolved id was never assigned, which broke listing of non-root
folders.

M  +1    -1    src/kio_gdrive.cpp

https://invent.kde.org/network/kio-gdrive/-/commit/3855e40f3b8fe25e03c85ed6c25cfb2f0a118565
Comment 7 Elvis Angelaccio 2024-06-11 21:54:39 UTC
Git commit 027c25b340e0405a0a3e0c53bf4d56454f99ca28 by Elvis Angelaccio.
Committed on 11/06/2024 at 21:53.
Pushed by elvisangelaccio into branch 'release/24.05'.

Fix regression in fileId lookup

Regression introduced in ed1507bc93 when porting to WorkerBase.

The resolved id was never assigned, which broke listing of non-root
folders.


(cherry picked from commit 3855e40f3b8fe25e03c85ed6c25cfb2f0a118565)

Co-authored-by: Elvis Angelaccio <elvis.angelaccio@kde.org>

M  +1    -1    src/kio_gdrive.cpp

https://invent.kde.org/network/kio-gdrive/-/commit/027c25b340e0405a0a3e0c53bf4d56454f99ca28