Fix regression in fileId lookup

Regression introduced in ed1507bc93 when porting to WorkerBase.

The resolved id was never assigned, which broke listing of non-root
folders.

BUG: 487021